plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '6.1.0'
}

group 'yt.graven'
version '1.0-SNAPSHOT'

sourceCompatibility = targetCompatibility = '16'

repositories {
    mavenCentral()
    maven {
        url 'https://jitpack.io/'
    }
}

dependencies {
    implementation "net.dv8tion:JDA:5.0.0-alpha.2"
    implementation 'me.carleslc.Simple-YAML:Simple-Yaml:1.7.2'
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'org.springframework:spring-context:5.3.13'
    implementation 'javax.inject:javax.inject:1'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'ch.qos.logback:logback-classic:1.2.7'
    implementation 'club.minnced:discord-webhooks:0.7.2'
    implementation 'com.google.code.gson:gson:2.8.9'
}

test {
    useJUnitPlatform()
}

shadowJar {
    project.configurations.implementation.canBeResolved(true)
    configurations = [project.configurations.implementation]
}

application {
    mainClassName = 'yt.graven.gravensupport.Main'
    setApplicationDefaultJvmArgs(["--add-opens", "java.base/java.net=ALL-UNNAMED"])
}

compileJava {
    manifest {
        attributes(
                'Main-Class': 'yt.graven.gravensupport.Main'
        )
    }
}

compileJava.options.encoding = "UTF-8"